--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,15 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.40</version>
         </dependency>
+        <!-- validator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
